refactor: replace trim-calls (#235)